# crypto-workshop-day-1

./: Cargo.toml  README.md  rust_presentation.pptx  tasks.md
benches/: bench.rs
src/: arithmetic.rs  decrypt.rs  encrypt.rs  keygen.rs  lib.rs  main.rs  params.rs  sampling.rs
